--- a/VTB_PrisonHack/AppFiles/Storyboard/Base.lproj/Main.storyboard
+++ b/VTB_PrisonHack/AppFiles/Storyboard/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lS4-Yx-Jh1">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -120,12 +119,43 @@
                                     <action selector="goBack:" destination="1wk-Bc-aIf" eventType="touchUpInside" id="QGi-i4-tfz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lAN-Q7-2lT">
+                                <rect key="frame" x="144" y="476" width="126" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="x0o-jj-y7c"/>
+                                </constraints>
+                                <state key="normal" title="Сайт инвестиций">
+                                    <color key="titleColor" red="0.043137254899999998" green="0.1137254902" blue="0.2156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="goToCite:" destination="1wk-Bc-aIf" eventType="touchUpInside" id="rMs-jI-q8E"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mey-8Z-Ary">
+                                <rect key="frame" x="120" y="514" width="174" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="GA3-2d-19Y"/>
+                                </constraints>
+                                <state key="normal" title="Подтяните свои знания!">
+                                    <color key="titleColor" red="0.078431372550000003" green="0.19215686269999999" blue="0.36078431370000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="goToSchool:" destination="1wk-Bc-aIf" eventType="touchUpInside" id="C8J-Wp-ied"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="gSg-EQ-GWk"/>
                         <color key="backgroundColor" red="0.92156862750000001" green="0.95294117649999999" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Mey-8Z-Ary" firstAttribute="top" secondItem="lAN-Q7-2lT" secondAttribute="bottom" constant="8" symbolic="YES" id="7Zd-92-Ktc"/>
+                            <constraint firstItem="lAN-Q7-2lT" firstAttribute="leading" secondItem="gSg-EQ-GWk" secondAttribute="leading" constant="144" id="D1K-W3-aYg"/>
+                            <constraint firstItem="gSg-EQ-GWk" firstAttribute="trailing" secondItem="Mey-8Z-Ary" secondAttribute="trailing" constant="120" id="Px0-SS-Mbt"/>
+                            <constraint firstItem="Mey-8Z-Ary" firstAttribute="top" secondItem="lAN-Q7-2lT" secondAttribute="bottom" constant="8" symbolic="YES" id="X3D-HS-I9a"/>
+                            <constraint firstItem="gSg-EQ-GWk" firstAttribute="trailing" secondItem="lAN-Q7-2lT" secondAttribute="trailing" constant="144" id="djB-Q3-ttZ"/>
                             <constraint firstItem="ZvI-vl-AHA" firstAttribute="centerY" secondItem="gSg-EQ-GWk" secondAttribute="centerY" id="fk7-oG-JPb"/>
+                            <constraint firstItem="Mey-8Z-Ary" firstAttribute="leading" secondItem="gSg-EQ-GWk" secondAttribute="leading" constant="120" id="lv2-mM-vJe"/>
                             <constraint firstItem="ZvI-vl-AHA" firstAttribute="centerX" secondItem="gSg-EQ-GWk" secondAttribute="centerX" id="tMW-gl-h3u"/>
+                            <constraint firstItem="lAN-Q7-2lT" firstAttribute="top" secondItem="ZvI-vl-AHA" secondAttribute="bottom" constant="8" symbolic="YES" id="vAt-v0-RIM"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
